Recupération de divers lib existante pour les accès aux données et l'internationalisation. Debut de la réalisation du Thread de recupération des images des diférents sites du job. -lecture de la page -creation de la regexp pour parcourir la page -extration des images et recuperation de l'url absolue Reste a faire : -interaction avec la base de donnée -finalisé le webService

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,7 +9,11 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  
+  	
+  	<!-- LANG -->
+	<context-param><param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name><param-value>com.ff.ressource.lang</param-value></context-param>
+	<context-param><param-name>javax.servlet.jsp.jstl.fmt.falbackLocale</param-name><param-value>fr</param-value></context-param>
+
   <servlet>
 		<servlet-name>crawlingRestService</servlet-name>
 		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
@@ -21,6 +25,6 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>crawlingRestService</servlet-name>
-		<url-pattern>/jobs/*</url-pattern>
+		<url-pattern>/do/*</url-pattern>
 	</servlet-mapping>
 </web-app>
