Première version fonctionnelle. fonctionnallité ajouter: -mise en place du ant pour le build de déploiment -intéraction avec la Base de données -ajouter des scripts de creation et du schéma de la base de donnée -utilisation d'un fichier de properties pour les textes restitués -stockage des images (à améliorer)

--- a/src/com/ff/ressource/lang.properties
+++ b/src/com/ff/ressource/lang.properties
@@ -7,5 +7,21 @@ boolean.false Non
 boolean.1 Oui
 boolean.0 Non
 
+text.status.BEGIN.label en attente
+text.status.RUN.label en cours
+text.status.END.label terminé
+text.status.ERROR.label en erreur
 
-job.status.label Job status demander : {0}
+jobs.create.return Nouveau Job = {0}
+jobs.status.BEGIN.label le job {0} n''a pas encore démarré
+jobs.status.RUN.label le job {0} est en cours
+jobs.status.END.label le job {0} est terminé\nutiliser : /ffcrawling/do/jobs/{0}/result pour plus de détail.
+jobs.status.ERROR.label le job {0} est tombé en erreur\nutiliser : /ffcrawling/do/jobs/{0}/result pour plus de détail.
+
+
+jobs.result.run.label Le job {0} est en cours. Vous devez attendre la fin pour voir le resultat. \nutiliser : /ffcrawling/do/jobs/{0}/status pour suivre l''avancement.
+jobs.result.title.label ---- Job : {0} ----\n
+jobs.result.status.label -- status : {0} --\n
+jobs.result.site.label >> Site (id:{0}, nombre d''image : {2}) : {1}\n
+jobs.result.image.label -> Image (id:{0}) : {1}\n
+jobs.result.end.label ---- END Job : {0} ----
